[project]
name = "rupasiksa"
description = "रूपशिक्षा — Sanskrit morphology RL environment: generate Pāṇinian verb forms, verified against the Aṣṭādhyāyī via vidyut-prakriya"
version = "0.1.0"
tags = ["sanskrit", "morphology", "linguistics", "single-turn", "train", "eval"]
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8",
    "vidyut>=0.4.0",
    "datasets>=2.19.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rupasiksa.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 3
